apps/monitoring/glances/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glances
  namespace: monitoring
spec:
  selector:
    app: glances
  ports:
    - port: 61208
      targetPort: 61208
  type: ClusterIP
